# cybersecurity-merit-badge

./: 404.html  index.html  main.py  mkdocs.yml  pyproject.toml
docs/: index.md  slides.md
docs/handouts/: crypto-cipher-handout.md  iot-home-network-handout.md  passwords-mfa-handout.md  phishing-wifi-handout.md  requirement-checklist.md
handouts/crypto-cipher-handout/: index.html
handouts/iot-home-network-handout/: index.html
handouts/passwords-mfa-handout/: index.html
handouts/phishing-wifi-handout/: index.html
handouts/requirement-checklist/: index.html
search/: search_index.json
slides/: index.html
