[project]
name = "cybersecurity-merit-badge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "mkdocs-revealjs>=0.0.6",
    "mkdocs-git-revision-date-localized-plugin>=1.3.0",
]
